# quartermaster

./: .gitignore  .jscpd.json  .venv  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SPEC.md  TODO.md  USAGE.md  audit.toml  build.rs  cliff.toml
.cargo/: config.toml
.claude/skills/dev-server/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  headless-image.yml  publish-crate.yml  release.yml  spt-server-image.yml
container/headless/: Containerfile  entrypoint.sh  seed-wine-prefix.sh
container/spt-server/: Containerfile  entrypoint.sh
dev/: seed.sql
docs/: forge-api-notes.md  refactor-core-ops-plan.md  refactor-health-backup-plan.md  refactor-templates-plan.md  refactor-web-handlers-plan.md  spt-remote-client-connectivity.md
docs/superpowers/plans/: 2026-06-04-quartermaster-implementation.md  2026-06-17-phase2-core-cli.md  2026-06-17-phase3-server-queue.md  2026-06-17-phase4-web-ui.md  2026-06-17-phase5-setup-utilities.md  2026-06-18-auto-start-server.md  2026-06-18-container-creation.md  2026-06-18-dry-refactor.md  2026-06-18-high-priority-spec-gaps.md  2026-06-18-logging-system.md  2026-06-18-mod-ui-features.md  2026-06-18-permission-model-session-overhaul.md  2026-06-18-todo-debt-cleanup.md  2026-06-18-web-ui-bugfixes.md  2026-06-18-web-ui-polish.md  2026-06-19-admin-user-management.md  2026-06-19-ci-cd-release-automation.md  2026-06-19-db-forge-testing.md  2026-06-19-fika-dedicated-client-management.md  2026-06-19-mod-request-voting.md  2026-06-19-modsync-integration.md  2026-06-19-setup-rework.md
docs/superpowers/specs/: 2026-06-18-container-creation-design.md  2026-06-18-logging-system-design.md  2026-06-18-mod-ui-features-design.md  2026-06-18-permission-model-session-overhaul-design.md  2026-06-18-web-ui-polish-design.md  2026-06-19-admin-user-management-design.md  2026-06-19-ci-cd-release-automation-design.md  2026-06-19-db-forge-testing-design.md  2026-06-19-fika-dedicated-client-management-design.md  2026-06-19-mod-request-voting-design.md  2026-06-19-modsync-integration-design.md  2026-06-19-setup-rework-design.md  2026-06-20-leaderboard-design.md
migrations/: 001_initial.sql  002_cascade_depends_on.sql  002_pending_updates.sql  003_file_mod_id_index.sql  003_log_entries.sql  004_file_source.sql  004_invite_codes_cascade.sql  005_addon_support.sql  006_constraints.sql  006_password_reset_tokens.sql  007_log_indexes.sql  007_mod_requests.sql  008_headless_users.sql  008_nullable_profile_id.sql  009_add_mod_disabled.sql  009_headless_session_stats.sql  010_raid_tracking.sql  010_url_install_support.sql  011_items_give_permission.sql  011_stash_public.sql  012_convoy_permission.sql  012_notes.sql  012_raid_snapshots.sql  013_cascade_mod_requests.sql  013_request_lifecycle.sql  014_config_edit_permission.sql  014_rbac.sql  015_backups.sql  015_convoy_groups.sql  016_convoy_permission.sql  016_drop_stash_public.sql  017_convoy_sync_tracking.sql  018_dependency_tree.sql
scripts/: check-logging.sh  sync-svm-metadata.py
src/: backup.rs  config.rs  container.rs  dirs.rs  error.rs  headless_sync.rs  health.rs  invite.rs  lib.rs  logging.rs  main.rs  modsync.rs  numa.rs  ops.rs  podman.rs  queue.rs  server_detect.rs  tls.rs
src/assets/: style.css  svm-form.js  svm-search.js
src/cli/: apply.rs  backup.rs  check.rs  client.rs  common.rs  config_cmd.rs  generate.rs  headless.rs  init.rs  install.rs  invite.rs  list.rs  migrate.rs  mod.rs  reindex.rs  remove.rs  restore.rs  serve.rs  server.rs  setup.rs  spt.rs  status.rs  track.rs  update.rs
src/client/: converge.rs  mod.rs  supervisor.rs
src/config_mgmt/: git.rs  mod.rs
src/convoy/: catalog.rs  download.rs  migrate.rs  mod.rs
src/db/: addons.rs  backups.rs  convoy.rs  headless_stats.rs  logs.rs  mod.rs  mods.rs  notes.rs  raids.rs  rbac.rs  requests.rs  schema.rs  tests.rs  users.rs
src/fika/: client.rs  config.rs  mod.rs  stats.rs
src/forge/: cache.rs  client.rs  mod.rs  models.rs  rate_limit.rs
src/headless/: error.rs  mod.rs  operations.rs  service.rs
src/logging/: compact.rs  mod.rs  writer.rs
src/spt/: detect.rs  game_data.rs  headless.rs  mod.rs  mods.rs  profiles.rs  releases.rs  server.rs
src/svm/: config.rs  metadata.rs  mod.rs
src/web/: api_auth.rs  auth.rs  csrf.rs  error.rs  flash.rs  install.rs  integrity_cache.rs  invite.rs  mod.rs  mod_zip_cache.rs  nav.rs  proxy.rs  proxy_metrics.rs  proxy_ws.rs  raid_tracker.rs  scanner_guard.rs  sse.rs  state.rs  tasks.rs  template_filters.rs  update_cache.rs
templates/: admin.html  admin_backups.html  base.html  change_password.html  convoy.html  dashboard.html  error.html  fika_settings.html  files.html  give_items.html  headless.html  join.html  leaderboard.html  login.html  logs.html  metrics.html  modsync.html  notes.html  notes_edit.html  queue.html  register.html  reset_password.html  settings.html  setup.html  stats.html  status.html
templates/clients/: detail.html  list.html
templates/configs/: editor.html  history.html  history_view.html  list.html
templates/headless/: operation_polling.html  operation_result.html
templates/mods/: detail.html  list.html
templates/partials/: container_stats.html  dashboard_clients_status.html  dashboard_container.html  dashboard_mods.html  dashboard_players.html  dashboard_server.html  dashboard_server_status.html  icons.html  integrity_progress.html  nav.html  proxy_metrics.html  queue_content.html  status_detail.html  status_integrity.html  status_mods.html  status_server.html  task_status.html
templates/profiles/: page.html
templates/raids/: detail.html  list.html  player.html  server.html
templates/settings/: clients.html  forge.html  logging.html  queue.html  server.html  web.html
templates/svm/: editor.html  manager.html  player_view.html
tests/: dirs_integration.rs  web_admin.rs  web_api_auth.rs  web_auth.rs  web_backups.rs  web_clients.rs  web_dashboard.rs  web_helpers.rs  web_misc.rs  web_mods.rs  web_queue.rs  web_rbac.rs  web_server.rs  web_settings.rs  web_tests.rs
tests/common/: mod.rs
(+77 files in other folders)
