[package]
name = "quartermaster"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quma"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP client (for Forge API)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }

# Streaming utilities (used by reqwest byte streams)
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Container management (Podman/Docker API)
bollard = "0.20"
tokio-util = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto & hashing
sha2 = "0.10"
rand = "0.9"

# Archive handling
zip = "2"
sevenz-rust2 = "0.12"
tempfile = "3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Web server
actix-web = "4"
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-governor = "0.10"

# Templating
askama = "0.16"

# Static asset embedding
rust-embed = "8"
actix-web-rust-embed-responder = "2.4"

# Password hashing
argon2 = "0.5"

# Secure password input (no terminal echo)
rpassword = "5"

# Non-poisoning Mutex for web DB access
parking_lot = "0.12"

# JSONC comment stripping (for Fika config)
json_comments = "0.2.2"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"
rolling-file = "0.2"
actix-web-lab = "0.24"
async-stream = "0.3"
tokio-stream = "0.1"
bytestring = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
temp-env = "0.3"
