[workspace]

[package]
name = "spt-quartermaster"
version = "0.1.0"
edition = "2021"
description = "CLI and web UI for managing server-side mods on an SPT/Fika dedicated server"
license = "AGPL-3.0-only"
repository = "https://github.com/cebarks/quartermaster"

[[bin]]
name = "quma"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# HTTP client (for Forge API)
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "query"], default-features = false }

# Streaming utilities (used by reqwest byte streams)
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Container management (Podman/Docker API)
bollard = "0.21"
tokio-util = "0.7"

# Error handling
anyhow = "1"
thiserror = "2"

# Crypto & hashing
sha2 = "0.10"
rand = "0.10"
subtle = "2"

# Archive handling
zip = "8"
sevenz-rust2 = "0.21"
tempfile = "3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Web server
actix-web = "4"
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-governor = "0.10"

# Templating
askama = "0.16"

# Static asset embedding
rust-embed = "8"
actix-web-rust-embed-responder = "2.4"

# Password hashing
argon2 = "0.5"

# Secure password input (no terminal echo)
rpassword = "7"

# Non-poisoning Mutex for web DB access
parking_lot = "0.12"

# JSONC comment stripping (for Fika config)
json_comments = "0.2.2"

# Regex for targeted text replacement
regex = "1"

# Scope guard for cleanup on panic/early return
scopeguard = "1"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"
rolling-file = "0.2"
actix-web-lab = "0.26"
async-stream = "0.3"
tokio-stream = "0.1"
bytestring = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
temp-env = "0.3"

[profile.release]
strip = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Custom publish jobs
publish-jobs = ["./publish-crate"]
