[workspace]

[package]
name = "spt-quartermaster"
version = "0.2.0"
edition = "2021"
description = "CLI and web UI for managing server-side mods on an SPT/Fika dedicated server"
license = "AGPL-3.0-only"
repository = "https://github.com/cebarks/quartermaster"

[[bin]]
name = "quma"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization & config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
serde-saphyr = "0.0.28"

# Database
rusqlite = { version = "0.40", features = ["bundled"] }

# HTTP client (for Forge API)
reqwest = { version = "0.13", features = ["json", "rustls", "stream", "query"], default-features = false }

# Streaming utilities (used by reqwest byte streams)
futures-util = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Container management (Podman/Docker API)
bollard = "0.21"
tokio-util = "0.7"

# Error handling
anyhow = "1"

# Crypto & hashing
sha2 = "0.11"
rand = "0.10"
subtle = "2"

# TLS
rcgen = "0.14"
rustls = "0.23"

# WebSocket proxy
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }

# Archive handling
zip = "8"
globset = "0.4"
sevenz-rust2 = "0.21"
tempfile = "3"

# Compression (profile snapshots)
flate2 = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Web server
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-session = { version = "0.11", features = ["cookie-session"] }
actix-governor = "0.10"
actix-ws = "0.4"

# Templating
askama = "0.16"

# Static asset embedding
rust-embed = "8"

# Password hashing
argon2 = "0.5"

# Secure password input (no terminal echo)
rpassword = "7"

# Non-poisoning Mutex for web DB access
parking_lot = "0.12"

# Regex for targeted text replacement
regex = "1"

# JSONC parsing for Fika config
jsonc-parser = { version = "0.26", features = ["cst", "serde"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"
rolling-file = "0.2"
actix-web-lab = "0.26"
actix-files = "0.6"
tokio-stream = "0.1"
mini-moka = "0.10.3"
local-ip-address = "0.6.13"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
temp-env = "0.3"
wiremock = "0.6"
urlencoding = "2"
actix-http = "3"
walkdir = "2"

[profile.release]
strip = true
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Custom publish jobs
publish-jobs = ["./publish-crate"]
